# libdave-jvm

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-natives.yml  ci.yml
api/: build.gradle.kts
api/src/main/java/moe/kyokobot/libdave/: Codec.java  CommitResult.java  DaveFactory.java  Decryptor.java  DecryptorResultCode.java  Encryptor.java  EncryptorResultCode.java  KeyRatchet.java  MediaType.java  RosterMap.java  Session.java
api/src/main/java/moe/kyokobot/libdave/callbacks/: EncryptorProtocolVersionChangedCallback.java  MLSFailureCallback.java
api/src/main/java/moe/kyokobot/libdave/impl/: Constants.java
api/src/main/java/moe/kyokobot/libdave/netty/: NettyDaveFactory.java  NettyDecryptor.java  NettyEncryptor.java
api/src/testFixtures/java/moe/kyokobot/libdave/: CryptorTestBase.java  TestUtil.java
gradle/wrapper/: gradle-wrapper.properties
impl-jni/: build.gradle.kts
impl-jni/src/main/java/moe/kyokobot/libdave/: NativeDaveFactory.java
impl-jni/src/main/java/moe/kyokobot/libdave/impl/: DaveNativeHandle.java  HandleStealer.java  NativeDecryptor.java  NativeEncryptor.java  NativeKeyRatchet.java  NativeNettyDecryptor.java  NativeNettyEncryptor.java  NativeSession.java
impl-jni/src/main/java/moe/kyokobot/libdave/natives/: DaveNativeBindings.java
impl-jni/src/main/java/moe/kyokobot/libdave/netty/: NativeNettyDaveFactory.java
impl-jni/src/test/java/moe/kyokobot/libdave/: CryptorTest.java
natives/: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  compare-builds.sh  javac-genheaders.txt
natives/boringssl/: .gitrepo  go.mod  go.sum
natives/boringssl/crypto/: internal.h  mem_internal.h  mem_test.cc
natives/boringssl/crypto/bio/: bio.cc
natives/boringssl/crypto/curve25519/: x25519_test.cc
natives/boringssl/crypto/dsa/: dsa.cc  internal.h
natives/boringssl/crypto/evp/: evp.cc  evp_extra_test.cc  evp_test.cc  internal.h
natives/boringssl/crypto/fipsmodule/dh/: dh.cc.inc  internal.h
natives/boringssl/crypto/fipsmodule/rsa/: internal.h  rsa.cc.inc
natives/boringssl/crypto/rand/: getrandom_fillin.h  urandom.cc  urandom_test.cc
natives/boringssl/crypto/rsa/: rsa_test.cc
natives/boringssl/crypto/stack/: stack_test.cc
natives/boringssl/crypto/x509/: internal.h  v3_ncons.cc  x509_lu.cc  x509_test.cc  x_crl.cc  x_x509.cc
natives/boringssl/include/openssl/: evp.h  prefix_symbols.h
natives/boringssl/infra/config/: main.star
natives/boringssl/rust/bssl-crypto/src/: hpke.rs
natives/boringssl/ssl/: extensions.cc  handshake_client.cc  handshake_server.cc  internal.h  ssl_lib.cc  ssl_session.cc  ssl_test.cc  tls13_client.cc  tls13_enc.cc  tls13_server.cc
natives/boringssl/ssl/test/: test_config.cc
natives/boringssl/ssl/test/runner/: common.go  dtls.go  handshake_client.go  handshake_server.go  prf.go  version_tests.go
natives/boringssl/util/: audit_symbols.go
natives/boringssl/util/bazel-example/: MODULE.bazel
natives/boringssl/util/bot/: DEPS
natives/boringssl/util/fipstools/delocate/: delocate.go
natives/boringssl/util/fipstools/delocate/testdata/x86_64-LabelRewrite/: in2.s  out.s
natives/boringssl/util/pregenerate/: asm_globals.go  build.go  idextractor.go
natives/cmake/: MLSPPConfig.cmake  OpenSSLConfig.cmake
natives/cmake/toolchains/: linux-aarch64-gnu.cmake  linux-aarch64-musl.cmake  linux-armhf-gnu.cmake  linux-armhf-musl.cmake  linux-i686-gnu.cmake  linux-i686-musl.cmake  linux-x86_64-gnu.cmake  linux-x86_64-musl.cmake
natives/json-cpp/: nlohmann_jsonConfig.cmake  nlohmann_jsonConfigVersion.cmake
natives/libdave/: .gitrepo
natives/libdave/cpp/: CMakeLists.txt
natives/libdave/cpp/includes/dave/: dave.h
natives/mlspp/: .gitrepo  CMakeLists.txt
natives/src/main/cpp/: bind_decryptor.cpp  bind_encryptor.cpp  bind_key_ratchet.cpp  bind_session.cpp  jni_utils.h  libdave.exports  moe_kyokobot_libdave_natives_DaveNativeBindings.h
